[package]
name = "knuckles-pdb-parser"
version = "0.1.0"
edition = "2021"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
serde = ["dep:serde", "dep:serde_json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "knuckles"
path = "src/lib.rs"

[[bin]]
name = "knuckles"
path = "src/main.rs"

[dependencies]
rayon = { version = "1.8.1", optional = true}
serde = { version = "1.0.195", features = ["derive"], optional = true}
serde_json = {version = "1.0.111", optional = true}
