# [package]
# name = "knuckles-pdb-parser"
# version = "0.1.0"
# edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "knuckles"
# path = "src/lib.rs"

# [[bin]]
# name = "knuckles"
# path = "src/main.rs"


[workspace]
members = ["knuckles-parse", "knuckles-toolkit"]
resolver = "2"

[workspace.dependencies]
rayon = { version = "1.8.1"}
serde = { version = "1.0.195", features = ["derive"]}
serde_json = {version = "1.0.111"}
