[package]
name = "knuckles-macro"
version.workspace = true
authors.workspace = true
license.workspace = true
license-file.workspace = true
description = "A procedural macro crate for generating Knuckles."
edition = "2021"

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.82", features = ["full"] }

[lib]
proc-macro = true
