[package]
name = "knuckles-parse"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "knuckles_parse"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]


[dependencies]
pyo3 = { version = "0.22.5", features = ["extension-module"], optional = true}
knuckles-macro = { path = "../knuckles-macro", optional = true}
rayon = { workspace = true, optional = true }
serde = { workspace = true, features = ["serde_derive"], optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
serde = ["dep:serde_json", "dep:serde"]
python = ["dep:pyo3", "dep:knuckles-macro"]
